src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActOn_Sync_Test_Field__c</fullName>
        <description>Temporary field only - for Adam Roach to test out sync properties with ActOn</description>
        <label>ActOn Sync Test Field</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_On_Lead_Score__c</fullName>
        <label>Act On Lead Score</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>After_Hours_Contact_WMP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Designated after hours contact for 24/7 support issues</inlineHelpText>
        <label>After Hours Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assistant_Email__c</fullName>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSC_Portal_Access_Request__c</fullName>
        <inlineHelpText>Please choose the appropriate access level for the contact.</inlineHelpText>
        <label>CSC Portal Access Request:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manager (Tickets Creation/Edits, Contacts, Reports, Knowledge Base)</fullName>
                </value>
                <value>
                    <fullName>Standard (Ticket Creation/Edits, Knowledge Base)</fullName>
                </value>
                <value>
                    <fullName>Read Only (Knowledge Base read only)</fullName>
                </value>
                <value>
                    <fullName>Read Only with Tickets (Knowledge Base and Tickets read only)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campaigns</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>People</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Training_WMP_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactURL__c</fullName>
        <formula>LEFT( $Api.Partner_Server_URL_230 , FIND(&apos;services/Soap/c/23.0&apos;, $Api.Enterprise_Server_URL_230) -1) &amp;   Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID_WMP__c</fullName>
        <label>Legacy Contact ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Long_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Long ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Picture__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; PictId__c, &quot;No picture found&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Portal_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Survey_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Utilized for flagging the contacts on an account that will receive customer surveys.</inlineHelpText>
        <label>Customer Survey Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Survey__c</fullName>
        <inlineHelpText>Marketing specific field for tracking customer survey times by customer</inlineHelpText>
        <label>xCustomer Survey</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fall</fullName>
                </value>
                <value>
                    <fullName>Spring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Not_Solicit_WMP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contact requests no Sales calls.</inlineHelpText>
        <label>Do Not Solicit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DummyTouchField__c</fullName>
        <label>DummyTouchField</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Executive Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIS_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GIS Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IT Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Account_a_Client__c</fullName>
        <formula>IF(Account.Client__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Account a Client?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LA_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LA Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Referenced_Date_WMP__c</fullName>
        <label>Last Referenced Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Details__c</fullName>
        <description>Syncs from ActOn hidden field called &quot;Lead Details&quot;</description>
        <inlineHelpText>Syncs from ActOn hidden field called &quot;Lead Details&quot;</inlineHelpText>
        <label>Lead Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <inlineHelpText>If the contact has a LinkedIn contact page, enter the URL here.</inlineHelpText>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MR_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upgrade Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Map_Update__c</fullName>
        <label>Market Map Update</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketo_Sync_Dummy_Field__c</fullName>
        <description>Hidden dummy field utilized to force the contacts in SF to show an updated &apos;last modified&apos; date/time for the Marketo Sync.</description>
        <label>Marketo Sync Dummy Field</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NIBRS_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NIBRS Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newsletter_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OptIn_Sales_Promos_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xOpt In - Sales Promos/Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_VisionCAD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xOpt In - VisionCAD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_VisionFBR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xOpt In - VisionFBR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_VisionFIRE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xOpt In - VisionFIRE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_VisionFORCE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xOpt In - VisionFORCE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_VisionINFORM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xOpt In - VisionINFORM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_VisionJAIL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xOpt In - VisionJAIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_VisionLMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xOpt In - VisionLMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_VisionMOBILE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xOpt In - VisionMOBILE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_VisionRMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xOpt In - VisionRMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_In_IQ_Analytics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt In - IQ/Analytics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_In_VisiNet_Advisories__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xOpt In - VisiNet Advisories</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_In_VisiNet_Tech_Communications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xOpt In - VisiNet Tech Communications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Company_Client_Product_News__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt Out - Company, Client &amp; Product News</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Technical_and_Product_Bulletins__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt Out - Technical &amp; Product Bulletins</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Tradeshows_and_Demos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt Out - Tradeshows and Demos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Training_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt Out - Training Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_Out_TriTech_com_Outage_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Opt out field for TriTech.com client contacts who do not wish to receive outage notifications</inlineHelpText>
        <label>Opt Out TriTech.com Outage Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <formula>OwnerId 

&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(OwnerId,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(OwnerId,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;) &gt;0,2,0)
    +IF(FIND(MID(OwnerId,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID (OwnerId,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF (FIND(MID(OwnerId,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(OwnerId,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;) &gt;0,1,0)
    +IF(FIND(MID(OwnerId,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID (OwnerId,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF (FIND(MID(OwnerId,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(OwnerId,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;) &gt;0,16,0)
    )+1,1)
&amp; MID (&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID (OwnerId,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(OwnerId,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(OwnerId,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;) &gt;0,4,0)
    +IF(FIND(MID(OwnerId,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID (OwnerId,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PictId__c</fullName>
        <inlineHelpText>Enter a document id to an image file with a picture of the contact</inlineHelpText>
        <label>PictId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Access_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Access Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prefers_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prefers Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prefers_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prefers Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_WMP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Support_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Support Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Family2__c</fullName>
        <formula>IF(INCLUDES(Account.Product_Family_WMP__c, &quot;EMS&quot;), &apos;EMS;&apos;,&apos;&apos;) + 
IF(INCLUDES(Account.Product_Family_WMP__c, &quot;IMC&quot;), &apos;IMC;&apos;,&apos;&apos;) + 
IF(INCLUDES(Account.Product_Family_WMP__c, &quot;Inform&quot;), &apos;Inform;&apos;,&apos;&apos;) + 
IF(INCLUDES(Account.Product_Family_WMP__c, &quot;VisiNet&quot;), &apos;VisiNet;&apos;,&apos;&apos;) + 
IF(INCLUDES(Account.Product_Family_WMP__c, &quot;VisionAIR&quot;), &apos;VisionAIR;&apos;,&apos;&apos;) + 
IF(INCLUDES(Account.Product_Family_WMP__c, &quot;Tiburon&quot;), &apos;Tiburon;&apos;,&apos;&apos;) + 
IF(INCLUDES(Account.Product_Family_WMP__c, &quot;911&quot;), &apos;911;&apos;,&apos;&apos;) +
IF(INCLUDES(Account.Product_Family_WMP__c, &quot;Zuercher&quot;), &apos;Zuercher;&apos;,&apos;&apos;) + 
IF(INCLUDES(Account.Product_Family_WMP__c, &quot;ZSuite&quot;), &apos;ZSuite;&apos;,&apos;&apos;) + 
IF(INCLUDES(Account.Product_Family_WMP__c, &quot;LETG&quot;), &apos;LETG;&apos;,&apos;&apos;) + 
IF(INCLUDES(Account.Product_Family_WMP__c, &quot;Insight&quot;), &apos;Insight;&apos;,&apos;&apos;) + 
IF(INCLUDES(Account.Product_Family_WMP__c, &quot;GIS&quot;), &apos;GIS;&apos;,&apos;&apos;) +
IF(INCLUDES(Account.Product_Family_WMP__c, &quot;Omega&quot;), &apos;Omega;&apos;,&apos;&apos;) +
IF(INCLUDES(Account.Product_Family_WMP__c, &quot;ETI&quot;), &apos;ETI;&apos;,&apos;&apos;) +
IF(INCLUDES(Account.Product_Family_WMP__c, &quot;ETI 911&quot;), &apos;ETI 911;&apos;,&apos;&apos;) +
IF(INCLUDES(Account.Product_Family_WMP__c, &quot;Impact&quot;), &apos;Impact;&apos;,&apos;&apos;)</formula>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RFP Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROID__c</fullName>
        <inlineHelpText>Additional VisionAIR mapping ID from CRM system</inlineHelpText>
        <label>ROID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_WMP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_WMP__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorized User</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Customer Staff</fullName>
                </value>
                <value>
                    <fullName>Director/Chief/Owner</fullName>
                </value>
                <value>
                    <fullName>Expungement Authorized</fullName>
                </value>
                <value>
                    <fullName>GIS Contact</fullName>
                </value>
                <value>
                    <fullName>IT Contact</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Secondary Contact</fullName>
                </value>
                <value>
                    <fullName>Upgrade Contact</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selection_Committee_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selection Committee Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Areas__c</fullName>
        <label>Stakeholder Areas</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>Law Records</fullName>
                </value>
                <value>
                    <fullName>Law Administration</fullName>
                </value>
                <value>
                    <fullName>Fire Administration</fullName>
                </value>
                <value>
                    <fullName>Common Administration</fullName>
                </value>
                <value>
                    <fullName>Crime Analysis</fullName>
                </value>
                <value>
                    <fullName>Law Responders</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>EMS Billing</fullName>
                </value>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>Civil</fullName>
                </value>
                <value>
                    <fullName>Jail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stakeholder_Products__c</fullName>
        <label>Stakeholder Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inform</fullName>
                </value>
                <value>
                    <fullName>Perform</fullName>
                </value>
                <value>
                    <fullName>Respond</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stakeholder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A group that gives hands on feedback on the design of a new feature.</inlineHelpText>
        <label>Stakeholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Steering_Areas__c</fullName>
        <label>Steering Areas</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Law RMS</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>Fire RMS</fullName>
                </value>
                <value>
                    <fullName>Civil Process</fullName>
                </value>
                <value>
                    <fullName>GIS</fullName>
                </value>
                <value>
                    <fullName>Jail Management</fullName>
                </value>
                <value>
                    <fullName>Analysis Reporting</fullName>
                </value>
                <value>
                    <fullName>ePCR</fullName>
                </value>
                <value>
                    <fullName>EMS Billing</fullName>
                </value>
                <value>
                    <fullName>Administrative (Back Office Functions)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Steering_Committee_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A focus group to decide priorities and direction of what should be added to the software.</inlineHelpText>
        <label>Steering Committee Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Steering_Products__c</fullName>
        <label>Steering Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inform</fullName>
                </value>
                <value>
                    <fullName>Perform</fullName>
                </value>
                <value>
                    <fullName>Respond</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscribed_Events__c</fullName>
        <label>Subscribed Events</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Zuercher 2016</fullName>
                </value>
                <value>
                    <fullName>ICON 2016</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unsubscribe_Email_Digest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unsubscribe Email Digest?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upgrade_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upgrade Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Z_Newsletter_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qualtrics__Informed_Consent_Date__c</fullName>
        <description>This date is populated when a contact grants Informed Consent via Qualtrics Informed Consent Quick Start Survey</description>
        <label>Informed Consent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>qualtrics__Informed_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is populated as a result of the Qualtrics Informed Consent Quick Start Survey</description>
        <label>Informed Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qualtrics__Last_Survey_Invitation__c</fullName>
        <label>Last Survey Invitation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>qualtrics__Last_Survey_Response__c</fullName>
        <label>Last Survey Response</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>qualtrics__Net_Promoter_Score__c</fullName>
        <label>Net Promoter Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY</columns>
        <columns>Product_Family2__c</columns>
        <columns>Primary_Contact_WMP__c</columns>
        <columns>Inactive_Contact__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllContacts_Convospark</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>Product_Family2__c</columns>
        <columns>Primary_Contact_WMP__c</columns>
        <columns>Inactive_Contact__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>convo</value>
        </filters>
        <label>All Contacts owned by Convospark</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Billing_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>Product_Family2__c</columns>
        <columns>Primary_Contact_WMP__c</columns>
        <columns>Inactive_Contact__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Billing_Contact__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Billing Contacts</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contacts_Impact</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>Product_Family2__c</columns>
        <columns>Is_Account_a_Client__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Family2__c</field>
            <operation>contains</operation>
            <value>Impact</value>
        </filters>
        <label>Contacts - Impact</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contacts_Inform</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>Product_Family2__c</columns>
        <columns>Is_Account_a_Client__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Family2__c</field>
            <operation>contains</operation>
            <value>VisiNet,Inform,911</value>
        </filters>
        <label>Contacts - Inform</label>
        <sharedTo>
            <group>VisiNetSupportTeam</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contacts_Perform</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>Product_Family2__c</columns>
        <columns>Is_Account_a_Client__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Family2__c</field>
            <operation>contains</operation>
            <value>IMC</value>
        </filters>
        <filters>
            <field>Inactive_Contact__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Contacts - Perform</label>
        <sharedTo>
            <group>PerformSupportTeam</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contacts_Respond</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>Product_Family2__c</columns>
        <columns>Is_Account_a_Client__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Family2__c</field>
            <operation>contains</operation>
            <value>EMS</value>
        </filters>
        <filters>
            <field>Inactive_Contact__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Contacts - Respond</label>
        <sharedTo>
            <group>Respond_Analytics_Sales_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contacts_Tiburon</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>Product_Family2__c</columns>
        <columns>Is_Account_a_Client__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Family2__c</field>
            <operation>contains</operation>
            <value>Tiburon</value>
        </filters>
        <filters>
            <field>Inactive_Contact__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Contacts - Tiburon</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_New_Contacts_This_Month</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>My New Contacts This Month</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_New_Contacts_This_Week</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>My New Contacts This Week</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>